# trading-controller

./: .dockerignore  .env  .env.example  .env.production  .flake8  .gitignore  AI_FLOW.md  BINANCE_DATA_API_DOCS.md  Dockerfile  NEWS_MODULE_KAFKA_REFACTOR.md  README.md  README_LOCAL.md  docker-compose.local.yml  docker-compose.yml  gen.py  main.py  pyproject.toml  pyrightconfig.json  start_local.bat  start_local.sh  start_production.bat  start_production.sh  tmpclaude-4eaa-cwd  trading.db
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  market.py  users.py
app/core/: config.py  db.py  security.py
app/modules/analysis/: public_api.py
app/modules/analysis/domain/: entities.py  ports.py  services.py
app/modules/analysis/infrastructure/: kafka_consumer.py  repository.py
app/modules/identity/: optional_auth.py  public_api.py
app/modules/identity/domain/: user.py
app/modules/market/: public_api.py
app/modules/market/domain/: kline.py  order_book.py  symbol_info.py  ticker.py
app/modules/market/infrastructure/: binance_rest_client.py  binance_ws_client.py  binance_ws_manager.py  market_data_repository.py  price_cache.py  symbols_cache.py  ws_config.py
app/modules/news/: public_api.py
app/shared/core/: config.py  logging_config.py
app/shared/domain/: enums.py
app/shared/infrastructure/: db.py  security.py
docs/: AI_INSIGHT_MARKET_CHAT.md  DEPLOYMENT.md  PROJECT_OVERVIEW.md  README.md
scripts/: crawl_news.py  demo_crawler.bat  demo_crawler.py  deploy.sh  start_crawler.bat  start_crawler.sh  test_crawler_fix.py  test_kafka_msg.py  test_rss.py  trigger_mock_news.bat  trigger_mock_news.sh  verify_fixes.py
trading_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+96 files in other folders)
