[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["logs*", "scripts*", "tests*"]

[project]
name = "trading-controller"
version = "0.1.0"
description = "Trading Controller with AI-powered market analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt<4.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "markupsafe<2.1",
    "ollama>=0.6.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.31",
    "torch>=2.6",
    "torchvision>=0.21,<1.0",
    "torchaudio>=2.6,<3.0",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.40.0",
    "websockets>=14.1",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "tweepy>=4.14.0",
    "apscheduler>=3.10.4",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "kafka-python>=2.0.2",
    "aiokafka>=0.13.0",
    "motor>=3.7.1",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.11",
    "types-beautifulsoup4>=4.12.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "feedparser",
    "tweepy",
    "ollama",
    "anthropic",
    "kafka.*",
]
ignore_missing_imports = true
